--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       db:
         image: mysql:8.0.23
         volumes:
-          - /mysql/conf.d:/etc/mysql/conf.d
+          - ./mysql/conf.d:/etc/mysql/conf.d
         ports:
           - 33060:3306
         env:
