--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.8'
 services:
   db:
     image: mysql:8.0.23
-    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     ports:
       - '3307:3306'
     volumes:
+      - ./mysqlconf.d:/etc/mysql/conf.d
       - ./tmp/mysql:/var/lib/mysql
   api:
     tty: true
