--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,12 @@ services:
       - "3001:3000"
     depends_on:
       - db
+  tbls:
+    image: k1low/tbls:latest
+    volumes:
+      - .:/work
+    environment:
+      TBLS_DSN: mysql://root:@db:3306/app_development
+      TBLS_DOC_PATH: docs/tables
+    depends_on:
+      - db
