--- a/.github/workflows/seed.yml
+++ b/.github/workflows/seed.yml
@@ -1,4 +1,4 @@
-name: CI
+name: seed
 
 on:
   push:
@@ -11,33 +11,33 @@ on:
       - docker-compose.yml
 
 jobs:
-  rspec:
+  seed:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     env:
-      RAILS_ENV: test
+      RAILS_ENV: development
       DB_HOST: 127.0.0.1
       DB_PORT: 33060
     services:
       db:
         image: mysql:8.0.23
-        volumes:
-          - mysqlconf.d:/etc/mysql/conf.d
         ports:
           - 33060:3306
         env:
           MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           BIND-ADDRESS: 0.0.0.0
+        volumes:
+          - mysql-confd:/etc/mysql/conf.d
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Set up Ruby
-        uses: ruby/setup-ruby@v1.64.1
+        uses: ruby/setup-ruby@v1.66.0
         with:
           ruby-version: 3.0.0
           bundler-cache: true
       - name: Cache gems
-        uses: actions/cache@v2
+        uses: actions/cache@v2.1.4
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
@@ -50,6 +50,6 @@ jobs:
       - name: migration
         run: |
           bundle exec rails db:create
-          bundle exec rails db:test:prepare
-      - name: run rspec
-        run: bundle exec rspec
+          bundle exec rails db:schema:load
+      - name: run seed_fu
+        run: bundle exec rails db:seed_fu
