--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - .:/app
     environment:
       DB_HOST: db
+      EDITOR: vim
     ports:
       - "3001:3000"
     depends_on:
