--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ coverage
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+/config/credentials/development.key
