--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -26,6 +26,7 @@ jobs:
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           BIND-ADDRESS: 0.0.0.0
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Set up Ruby
