--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -17,10 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
-      - name: Set up Ruby 3.0.0
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1.68.0
         with:
-          ruby-version: 3.0.0
+          ruby-version: 3.0.1
           bundler-cache: true
       - name: run brakeman
         run: |
