--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,11 @@ AllCops:
     - 'Gemfile'
     - 'spec/**/*'
     - 'vendor/**/*'
+    - 'spec/spec_helper.rb'
+    - 'spec/rails_helper.rb'
   NewCops: enable
+
+require: rubocop-rspec
 
 Style/Documentation:
   Enabled: false
