--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,9 +7,16 @@ AllCops:
     - 'Gemfile'
     - 'spec/**/*'
     - 'vendor/**/*'
+    - 'spec/spec_helper.rb'
+    - 'spec/rails_helper.rb'
   NewCops: enable
 
+require: rubocop-rspec
+
 Style/Documentation:
+  Enabled: false
+
+Style/EmptyCaseCondition:
   Enabled: false
 
 Style/TrailingCommaInHashLiteral:
@@ -20,3 +27,9 @@ Metrics/AbcSize:
 
 Metrics/MethodLength:
   Max: 20
+
+Lint/UnusedMethodArgument:
+  Enabled: false
+
+Naming/MethodParameterName:
+  Enabled: false
