--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,10 +1,7 @@
 name: RuboCop
 
 on:
-  push:
-    branches:
-      - 'feature/*'
-      - main
+  pull_request:
     paths-ignore:
       - README.md
       - Dockerfile
