--- a/.github/workflows/eager_load.yml
+++ b/.github/workflows/eager_load.yml
@@ -44,4 +44,4 @@ jobs:
           bundle exec rails parallel:create
           bundle exec rails parallel:load_schema
       - name: run rspec
-        run: bundle exec rails s
+        run: bundle exec rails s -d
