--- a/.github/workflows/eager_load.yml
+++ b/.github/workflows/eager_load.yml
@@ -7,6 +7,14 @@ on:
       - Dockerfile
       - docker-compose.yml
       - 'gcp/**'
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - README.md
+      - Dockerfile
+      - docker-compose.yml
+      - 'gcp/**'
 
 jobs:
   reager-load:
