--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -26,9 +26,11 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1.91.0
         with:
-          ruby-version: 3.0.3
+          ruby-version: 3.1.0
           bundler-cache: true
       - name: run brakeman
         run: |
           gem install brakeman
-          brakeman -6 -A -w 1
+          # Ruby3.1の構文に対応したら --no-exit-on-errorを外す
+          # https://github.com/presidentbeef/brakeman/issues/1664
+          brakeman -6 -A -w 1 --no-exit-on-error
