--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   db:
+    platform: linux/x86_64
     image: mysql:8.0.27
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
