--- a/Dockerfile.multiple
+++ b/Dockerfile.multiple
@@ -11,12 +11,10 @@ RUN apk update && \
     make \
     mysql-client \
     mysql-dev \
-    bash \
     tzdata && \
     apk add --virtual build-packs --no-cache \
     build-base \
-    curl-dev \
-    bash
+    curl-dev
 
 RUN mkdir /app
 WORKDIR /app
@@ -25,6 +23,22 @@ COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 
 RUN bundle install
+RUN apk del build-packs
+
+FROM ruby:3.1.2-alpine3.15
+
+RUN apk update && \
+    apk add \
+    gcompat \
+    mysql-client \
+    mysql-dev \
+    bash \
+    tzdata
+
+RUN mkdir /app
+WORKDIR /app
+
+COPY --from=builder /usr/local/bundle /usr/local/bundle
 
 COPY . .
 
