--- a/renovate.json
+++ b/renovate.json
@@ -3,11 +3,15 @@
   "extends": [
     "config:base"
   ],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["after 1am and before 5pm every weekday"],
+  "labels": ["dependencies"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch"],
       "matchCurrentVersion": "!/^0/",
-      "automerge": true
+      "automerge": true,
+      "platformAutomerge": true
     }
   ]
 }
