--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "timezone": "Asia/Tokyo",
   "schedule": ["after 1am and before 5pm every weekday"],
   "labels": ["dependencies"],
@@ -12,6 +10,11 @@
       "matchCurrentVersion": "!/^0/",
       "automerge": true,
       "platformAutomerge": true
+    },
+    {
+      "matchManagers": ["ruby-version", "dockerfile"],
+      "automerge": false,
+      "platformAutomerge": false
     }
   ]
 }
