--- a/Dockerfile.multiple
+++ b/Dockerfile.multiple
@@ -1,4 +1,4 @@
-FROM ruby:3.1.3-alpine3.15 as builder
+FROM ruby:3.2.2-alpine as builder
 
 RUN apk update && \
     apk add --no-cache \
@@ -25,7 +25,7 @@ COPY Gemfile.lock /app/Gemfile.lock
 RUN bundle install
 RUN apk del build-packs
 
-FROM ruby:3.1.3-alpine3.15
+FROM ruby:3.2.2-alpine
 
 RUN apk update && \
     apk add \
